moved styles to seperate css file

--- a/views/results.ejs
+++ b/views/results.ejs
@@ -11,21 +11,7 @@
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDBpJwKuwvWYmqM3Tk0C1LaBhu6cfrBoKU&callback=initMap&libraries=&v=weekly"
       defer
     ></script>
-    <style type="text/css">
-        /* Always set the map height explicitly to define the size of the div
-         * element that contains the map. */
-        #map {
-          height: 100%;
-        }
-  
-        /* Optional: Makes the sample page fill the window. */
-        html,
-        body {
-          height: 100%;
-          margin: 0;
-          padding: 0;
-        }
-      </style>
+    <link rel='stylesheet' href='/stylesheets/results.css'>
       <script>
         "use strict";
 
