added text specifying what the centerpoint coordinates are

--- a/views/results.ejs
+++ b/views/results.ejs
@@ -29,7 +29,7 @@
               </div>
                 <%counter++%> 
         <%}) %>
-        <%= `lattitude:${centerpoint[0]},`%>
+        <%= `Centerpoint coordiantes lattitude:${centerpoint[0]},`%>
         <%= `longitude:${centerpoint[1]}`%>
     </div>
     <div id="map"></div>
