--- a/views/results.ejs
+++ b/views/results.ejs
@@ -19,20 +19,22 @@
   <div id='lngCenter' hidden><%= centerpoint[1] %>'</div>
   <div id="map"></div>
 
-  <script src='/scripts/finalResult.js'></script>
-
-
     <div id='info'>
       <% let counter=0%>
 
         <%  data.location.forEach(element=>{ %>
               <div>
-                <%=`Address${counter}:${element} Cooridinates:${locals.loc[counter]}`%>
+                <%=`Address${counter+1}:${element} Cooridinates:${locals.loc[counter]}`%>
+              </div>
+              <div class='locInfo' hidden>
+                <%=locals.loc[counter]%>
               </div>
                 <%counter++%> 
         <%}) %>
         <%= `Centerpoint coordiantes lattitude:${centerpoint[0]},`%>
         <%= `longitude:${centerpoint[1]}`%>
     </div>
+    <script src='/scripts/finalResult.js'></script>
+
 </body>
 </html>
