gave each addresse a class for selecting purposes

--- a/views/results.ejs
+++ b/views/results.ejs
@@ -23,7 +23,7 @@
       <% let counter=0%>
 
         <%  data.location.forEach(element=>{ %>
-              <div>
+              <div class='displayInfo'>
                 <%=`Address${counter+1}:${element} Cooridinates:${locals.loc[counter]}`%>
               </div>
               <div class='locInfo' hidden>
