put centerpoint coordiantes inside a div with id of centerpoint

--- a/views/results.ejs
+++ b/views/results.ejs
@@ -37,8 +37,10 @@
               
                 <%counter++%> 
         <%}) %>
-        <%= `Centerpoint coordiantes lattitude:${centerpoint[0]},`%>
-        <%= `longitude:${centerpoint[1]}`%>
+        <div id='centerpoint'>
+          <%= `Centerpoint coordiantes lattitude:${centerpoint[0]},`%>
+          <%= `longitude:${centerpoint[1]}`%>
+        </div>
     </div>
     <script src='/scripts/finalResult.js'></script>
 
