changed name of passed data to match data sent in results route

--- a/views/results.ejs
+++ b/views/results.ejs
@@ -22,7 +22,7 @@
     <div id='info'>
       <% let counter=0%>
 
-        <%  data.location.forEach(element=>{ %>
+        <%  locations.forEach(element=>{ %>
               <div class='displayInfo'>
                 <%=`Address${counter+1}:${element} Cooridinates:${locals.loc[counter]}`%>
               </div>
