--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,22 +11,24 @@
     <div style ="text-align: center;border: 2px solid black; width: 50%; margin: auto; padding: 8px">
         <form action="/results" method="post">
             <br>
-            <button id="add_location_button" type="button">Add Location</button>
-            <button id="remove_location_button" type="button">Remove Location</button>
+            <button id="add" type="button">Add Location</button>
             <!-- See link for logic:
             https://stackoverflow.com/questions/32382450/dynamically-display-html-elements-via-loop
             -->
             <br>
             <br>
             <input type="text" name="location" style="width: 50%; margin: 3px">
+            <div>
             <br>
             <input type="text" name="location" style="width: 50%; margin: 3px">
             <br>
+            <input type="text" name="location" style="width: 50%; margin: 3px">
             <br>
             <input type="Submit" value="Next">
 
 
         </form>
     </div>
+    <script src='/scripts/home.js'></script>
 </body>
 </html>
