--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,24 +9,21 @@
     <h1 style="text-align: center">Welcome to the future home of the Rendeview web app!</h1>
 
     <div style ="text-align: center;border: 2px solid black; width: 50%; margin: auto; padding: 8px">
-        <form action="/results" method="post">
+        <form id='form' action="/results" method="post">
             <br>
             <button id="add" type="button">Add Location</button>
             <!-- See link for logic:
             https://stackoverflow.com/questions/32382450/dynamically-display-html-elements-via-loop
             -->
-            <br>
-            <br>
-            <input type="text" name="location" style="width: 50%; margin: 3px">
-            <div>
-            <br>
-            <input type="text" name="location" style="width: 50%; margin: 3px">
-            <br>
-            <input type="text" name="location" style="width: 50%; margin: 3px">
-            <br>
-            <input type="Submit" value="Next">
-
-
+            <div class='addressInfo'>
+                <label>Location:1</label><input type="text" name="location" style="width: 50%; margin: 3px">
+                <label>Name:</label></Name><input type="text" name="Name" >
+            </div>
+            <div class='addressInfo'>
+                <label>Location:2</label><input type="text" name="location" style="width: 50%; margin: 3px">
+                <label>Name:</label></Name><input type="text" name="Name" >
+            </div>
+            <input id='submit' type="Submit" value="Next">
         </form>
     </div>
     <script src='/scripts/home.js'></script>
