created a stylesheet styling the close span

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Rendeview</title>
+    <link rel='stylesheet' href='/stylesheets/home.css'>      
 </head>
 <body>
 
