added gemoetry library in order to decode encoded polylines

--- a/views/results.ejs
+++ b/views/results.ejs
@@ -8,7 +8,7 @@
     <script src="/config.js"></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDBpJwKuwvWYmqM3Tk0C1LaBhu6cfrBoKU&callback=initMap&libraries=&v=weekly"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDBpJwKuwvWYmqM3Tk0C1LaBhu6cfrBoKU&callback=initMap&libraries=geometry&v=weekly"
       defer
     ></script>
     <link rel='stylesheet' href='/stylesheets/results.css'>      
