removed refernce of locals

--- a/views/results.ejs
+++ b/views/results.ejs
@@ -28,7 +28,7 @@
               </div>
               <div class='locInfo' hidden>
                 <div class='coordiantes'>
-                  <%=locals.loc[counter]%>
+                  <%=loc[counter]%>
                 </div>
                 <div class='Address'>
                   <%= element%>
