added a class name for defaultInputs

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Rendeview</title>
-    <link rel='stylesheet' href='/stylesheets/home.css'>      
+    <link rel='stylesheet' href='/stylesheets/home.css'>  
 </head>
 <body>
 
@@ -14,16 +14,17 @@
             <br>
             <button id="add" type="button">Add Location</button>
             <div class='addressInfo'>
-                <label>Location:1</label><input type="text" name="location" style="width: 50%; margin: 3px">
+                <label>Location:1</label><input class='defaultSearchInputs' type="text" name="location" style="width: 50%; margin: 3px">
                 <label>Name:</label></Name><input type="text" name="Name" >
             </div>
             <div class='addressInfo'>
-                <label>Location:2</label><input type="text" name="location" style="width: 50%; margin: 3px">
+                <label>Location:2</label><input class='defaultSearchInputs' type="text" name="location" style="width: 50%; margin: 3px">
                 <label>Name:</label></Name><input type="text" name="Name" >
             </div>
             <input id='submit' type="Submit" value="Next">
         </form>
     </div>
-    <script src='/scripts/home.js'></script>
+
+  <script src='/scripts/home.js'></script>
 </body>
 </html>
