added overflow auto

--- a/public/stylesheets/results3.css
+++ b/public/stylesheets/results3.css
@@ -1,20 +1,22 @@
-  /* Always set the map height explicitly to define the size of the div
-         * element that contains the map. */
-         #map {
-            height: 100%;
-            width:80%;
-            position: relative;
-            float: right;
-}
+
           /* Optional: Makes the sample page fill the window. */
 html,body {
             height: 100%;
             margin: 0;
             padding: 0;
+            display:float;
+}
+  /* Always set the map height explicitly to define the size of the div
+         * element that contains the map. */
+#map {
+    height: 100%;
+    width:80%;
+    flex:8;
+    float:left;
 }
 #info{
   height: 100%;
-  width:20%;
-  position: relative;
-  float: left;
+  width: 20%;
+  float:left;
+  overflow: auto;
 }
