--- a/views/result3.ejs
+++ b/views/result3.ejs
@@ -11,45 +11,48 @@
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDBpJwKuwvWYmqM3Tk0C1LaBhu6cfrBoKU&callback=initMap&libraries=geometry&v=weekly"
       defer
     ></script>
-    <link rel='stylesheet' href='/stylesheets/results.css'>      
+    <link rel='stylesheet' href='/stylesheets/results3.css'>      
 </head>
 <body>
 
 
-  <div id="map"></div>
-  <div id='latCenter' hidden><%=centerpointCoordinates.lat %>'</div>
-  <div id='lngCenter' hidden><%= centerpointCoordinates.lng %>'</div>
-  <div id='Centerpoint'>
-    <%=`Centerpoint:${centerpointCoordinates.lat},${centerpointCoordinates.lng}` %>
-  </div>
-    <div id='placesInfo'>
-        <% let counter=0%>
-        <% places.forEach(element=>{%>
-        <div class='individualPlace'>
-            <%let message=''%>
-            <%message+=`${element.PersonsName}:${element.location}\n`%>
-            <%message+=`Distance:${element.Directions.totalDistance.text}\n` %>
-            <%message+=`Time:${element.Directions.totalDuration.text}`%>
-            <pre><%=message%></pre>
-            <div hidden clas='hiddenInfo'>
+  <div id='info'>
+    <div id='latCenter' hidden><%=centerpointCoordinates.lat %>'</div>
+    <div id='lngCenter' hidden><%= centerpointCoordinates.lng %>'</div>
+    <div id='Centerpoint'>
+        <%=`Centerpoint:${centerpointCoordinates.lat},${centerpointCoordinates.lng}` %>
+    </div>
+        <div id='placesInfo'>
+            <% let counter=0%>
+            <% places.forEach(element=>{%>
+            <div class='individualPlace'>
+                <%let message=''%>
+                <%message+=`${element.PersonsName}:${element.location}\n`%>
+                <%message+=`Distance:${element.Directions.totalDistance.text}les\n` %>
+                <%message+=`Time:${element.Directions.totalDuration.text}`%>
+                <div hidden class='hiddenInfo'>
+                </div>
+                <p><%=message%></p>
 
             </div>
+            <% })%>
         </div>
-        <% })%>
-    </div>
-    <div id='possibleMeetSpots'>
-        <% possibleMeetUpSpots.forEach(element=>{%>
-            <div class='spot'>
-                <div class='spotName'><%=element.name%></div>
-                <div class='spotCooordinates'>
-                    <div hidden class='spotLat'><%=element.coordinates.lat%></div>
-                    <div hidden class='spotLng'><%=element.coordinates.lng%></div>
-                </div>
-                <div id='spotAdresss'><%=element.address%></div>
-                <div id='spotType'><%=element.type%></div>
+        <div id='possibleMeetSpots'>
+         <% possibleMeetUpSpots.forEach(element=>{%>
+                <div class='spot'>
+                    <div class='spotName'><%=element.name%></div>
+                    <div class='spotCooordinates'>
+                        <div hidden class='spotLat'><%=element.coordinates.lat%></div>
+                        <div hidden class='spotLng'><%=element.coordinates.lng%></div>
+                    </div>
+                    <div id='spotAdresss'><%=element.address%></div>
+                    <div id='spotType'><%=element.type%></div>
             </div>
-        <%})%>
-    </div>
+            <%})%>
+        </div>
+  </div>
+  <div id="map"></div>
+
     <script src='/scripts/map3.js'></script>
 
 </body>
