--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,32 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang = "en">
 <head>
-    <meta charset="UTF-8">
-    <title>Rendeview</title>
+<title>Rendeview | Home</title>
+<link rel="icon" href="/Frontend/free-sport-car-icon-1768-thumb.png">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
+<link rel="stylesheet" href="/Frontend/home.css">
 </head>
 <body>
-
-    <h1 style="text-align: center">Welcome to the future home of the Rendeview web app!</h1>
-
-    <div style ="text-align: center;border: 2px solid black; width: 50%; margin: auto; padding: 8px">
-        <form action="/results" method="post">
-            <br>
-            <button id="add_location_button" type="button">Add Location</button>
-            <button id="remove_location_button" type="button">Remove Location</button>
+<div class="wrap_page">
+  <div class="top">
+	<div class="logo-nav auto-margin">
+	  <div class="logo-cont">
+      Rendeview
+      </div><!--/logo-->
+    </div>
+</div><!--/top-->
+<div class="page">
+	<div class="body-content" id="main">
+	  <div class="col-30">
+	    <div class="col-content">
+	      <div class="block formSection">
+		    <form id="locations" name="locations" action="/results" method="post">
+            <div class="block">
+              <div class="wrap-field">
+                <div class="errMsg">Please enter at least two locations!</div>             
+                <input type="text" name="location" id="location1" placeholder="First Address or Zipcode" class="txt-field req-fld" />
+              </div>
+			</div>
+			<div class="block"> 		  
+              <div class="wrap-field">
+                <div class="errMsg">Please enter at least two locations!</div>
+                <input type="text" name="location" id="location2" placeholder="Second Address or Zipcode" class="txt-field req-fld" autocomplete="new-location2"/>
+              </div>
+            </div>
             <!-- See link for logic:
             https://stackoverflow.com/questions/32382450/dynamically-display-html-elements-via-loop
             -->
-            <br>
-            <br>
-            <input type="text" name="location" style="width: 50%; margin: 3px">
-            <br>
-            <input type="text" name="location" style="width: 50%; margin: 3px">
-            <br>
-            <br>
-            <input type="Submit" value="Next">
-
-
-        </form>
-    </div>
+            <i class="bi bi-plus-circle"></i>
+            <i class="bi bi-x-circle-fill"></i>
+            <div class="block txt-center">
+              <input type="submit" name="btn-sumbit" id="btnFrmSubmit" value="Go" class="btn-submit" />
+            </div>
+            </form>
+		  </div>
+	    </div>
+	  </div>
+	  <div class="col-70 main-left">
+	    <div class="col-content">
+		</div>
+	  </div>
+	</div>
+  </div><!-- / page-->
+  <div class="btn-top"><i class="fas fa-angle-up"></i></div>
+  <div class="footer">
+  
+  </div><!--/ footer-->
+</div>
 </body>
 </html>
