HTML/CSS improvements

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,12 +10,13 @@
 <body>
   <div class = "hero-image"> 
     
-    <div style =" text-align: center;border: 2px solid white; width: 50%; margin: auto; padding: 8px ; height: 800px">
+    <div style =" text-align: center;border: 2px solid white; width: 50%; margin: auto; padding: 8px ; height:900px; background: rgb(45, 45, 45, 0.75);">
 
         <h1 class="display-1"> Rendeview</h1>
         
-        <p class="h6">This application lets you find an equidistant destination that accounts for time in traffic to meet with friends. 
-            Enter in the location and name of each member, then choose what venue type you want to meet at. </p>
+        <p class="h6">This application lets you find an equidistant destination that accounts for time in traffic to meet with friends. </p>
+            
+        <p class ="h6">Enter in the location and optionally the name of each member, then choose what venue type you want to meet at. </p>
         
          
         <form id='form' action="/results" method="post">
